syntax = "proto3";

enum Permissions {
    API = 0;
    USER = 1;
    ADMIN = 2;
}

message User {
    string uuid = 1;
    string email = 2;
    string firstName = 3;
    string lastName = 4;
    Permissions permissions = 5;
}

message Claims {
    string userUUID = 1;
    string email = 2;
    Permissions permissions = 3;
}

message RegisterRequest {
    string email = 1;
    string firstName = 2;
    string lastName = 3;
    string password = 4;
    // TODO: permissioning
}

message RegisterResponse {

}

message GetTokenRequest {
    string email = 1;
    string password = 2;
    Permissions requestedPermissions = 3;
}

message GetTokenResponse {
    string token = 1;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    Claims claims = 1;
}

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}